# trade-turtle

./: .gitignore  README.md  pyproject.toml
trade_turtle/: downloader.py  gym_env.py  main.py
