[tool.poetry]
name = "trade-turtle"
version = "0.1.0"
description = ""
authors = ["Nicholas Fasching <91689117+njfdev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.40"
stable-baselines3 = "^2.3.2"
shimmy = ">=0.2.1"
gymnasium = "^0.29.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
